update about, make custom scrollbar, fix landing page

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Width */
+::-webkit-scrollbar {
+    width: 8px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+  
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: rgb(59 130 246);
+    border-radius: 1.5rem;
+}
+  
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(29 78 216);
+}
+  
 #body-text {
     font-family: 'IBM Plex Mono', monospace;
 }
